# CPP

./: .gitignore
.github/workflows/: tests.yml
Module 00/ex00/: Makefile  megaphone.cpp
Module 00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
Module 01/ex00/: Zombie.cpp  Zombie.hpp  main.cpp
Module 01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
Module 01/ex02/: main.cpp
Module 01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Weapon.cpp  Weapon.hpp  main.cpp
Module 01/ex04/: FileReplacer.cpp  FileReplacer.hpp  Makefile  main.cpp
Module 01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
Module 02/ex00/: Fixed.cpp  Fixed.hpp  main.cpp
Module 02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
Module 02/ex02/: Fixed.cpp  Fixed.hpp  main.cpp
Module 03/ex00/: ClapTrap.cpp  ClapTrap.hpp  main.cpp
Module 03/ex01/: ClapTrap.cpp  Makefile  main.cpp
Module 03/ex02/: ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
Module 04/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  main.cpp
Module 04/ex01/: Animal.cpp  Animal.hpp  Brain.hpp  Dog.cpp  Dog.hpp  Makefile  main.cpp
Module 04/ex02/: Animal.cpp  Animal.hpp  Brain.cpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  main.cpp
Tests/: CMakeLists.txt
Tests/cmake/: TestHarness.cmake
Tests/fixtures/: module00_ex01_add_search_exit.txt  module00_ex01_empty_search.txt  module00_ex01_invalid_index.txt
Tests/integration/: module00_ex00_megaphone_test.cpp  module00_ex01_phonebook_cli_test.cpp  module01_ex00_zombie_test.cpp  module01_ex01_zombie_horde_test.cpp  module01_ex02_brain_test.cpp  module01_ex03_violence_test.cpp  module01_ex04_replace_test.cpp  module01_ex05_harl_test.cpp  module02_ex00_fixed_test.cpp  module02_ex01_fixed_test.cpp  module02_ex02_fixed_test.cpp  module03_ex00_claptrap_test.cpp  module03_ex01_scavtrap_test.cpp  module03_ex02_fragtrap_test.cpp  module04_ex00_polymorphism_test.cpp  module04_ex01_brain_test.cpp  module04_ex02_abstract_test.cpp
Tests/support/: fixture_loader.cpp  fixture_loader.hpp  process_runner.cpp  process_runner.hpp  stream_redirect.cpp  stream_redirect.hpp  temp_dir.cpp  temp_dir.hpp
Tests/unit/: module00_ex01_contact_test.cpp  module00_ex01_phonebook_storage_test.cpp  module01_ex00_zombie_test.cpp  module01_ex01_zombie_horde_test.cpp  module01_ex03_weapon_human_test.cpp  module01_ex04_file_replacer_test.cpp  module01_ex05_harl_test.cpp  module02_ex00_fixed_test.cpp  module02_ex01_fixed_test.cpp  module02_ex02_fixed_test.cpp  module03_ex00_claptrap_test.cpp  module03_ex01_scavtrap_test.cpp  module03_ex02_fragtrap_test.cpp  module04_compliance_test.cpp  module04_ex00_polymorphism_test.cpp  module04_ex01_brain_test.cpp  module04_ex02_abstract_test.cpp
